<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/login"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            android:id="@+id/ask_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:text="@string/notregister"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>


</RelativeLayout>
