<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_worker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pitteriimpiantisrl.app.DipendenteActivity">

    <TextView
        android:id="@+id/dipendente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dipendenteCF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dipendenteUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/selectClientButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectClient"
        android:text="@string/select_client" />

    <TextView
        android:id="@+id/noClientSelectedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_client_selected"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/clientPart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.pitteriimpiantisrl.app.views.ClientView
            android:id="@+id/selectedClientView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.pitteriimpiantisrl.app.views.ClientView>

        <TextView
            android:id="@+id/totalHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/jobsListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addJob"
            android:text="@string/add_job" />
    </LinearLayout>

</LinearLayout>
